--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -39,20 +39,16 @@ jobs:
             -e "s/ARG USER_ID/ARG USER_ID=$USER_ID/" \
             -e "s/ARG GROUP_ID/ARG GROUP_ID=$GROUP_ID/" \
             docker/node/Dockerfile
-          cat docker/node/Dockerfile
           \
           docker login -u $DOCKER_USERNAME -p $DOCKER_ACCESS_TOKEN
           \
           docker-compose -f docker-compose.ci.yml down
           docker-compose -f docker-compose.ci.yml up -d --build
           docker ps -a
-          echo "USER_ID=$USER_ID USER_NAME=`id -un`"
-          echo "GROUP_ID=$GROUP_ID GROUP_NAME=`id -gn`"
-          ls -lAF
-          pwd
           \
           echo "Installing dependencies..."
           echo "$(grep -v '"cypress":' package.json)" > package.json
+          rm cypress.config.js
           docker-compose -f docker-compose.ci.yml exec -T node npm i --foreground-scripts
           \
           echo "Running build process..."
