--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
         "@svgr/webpack": "8.0.1",
         "@testing-library/jest-dom": "5.16.5",
         "@testing-library/react": "14.0.0",
+        "@testing-library/user-event": "14.4.3",
         "@types/jest": "29.5.1",
         "@typescript-eslint/eslint-plugin": "5.59.7",
         "@typescript-eslint/parser": "5.59.7",
@@ -162,6 +163,7 @@
         "eslint-plugin-react": "7.32.2",
         "eslint-webpack-plugin": "4.0.1",
         "file-loader": "6.2.0",
+        "fork-ts-checker-webpack-plugin": "8.0.0",
         "jest": "29.5.0",
         "jest-environment-jsdom": "29.5.0",
         "husky": "8.0.3",
