Move built server dir to build.

--- a/package.json
+++ b/package.json
@@ -34,19 +34,19 @@
     },
     "scripts": {
         "prepare": "node --stack-trace-limit=9999 --trace-warnings ./scripts/install-husky.js",
-        "clean": "rimraf ./server ./build/fonts ./build/images ./build/*.js* ./build/*.css && node -e \"fs.mkdirSync('./build/data/uploads', { recursive: true });\"",
+        "clean": "rimraf ./build/server ./build/browser/fonts ./build/browser/images ./build/browser/*.js* ./build/browser/*.css && node -e \"fs.mkdirSync('./build/browser/data/uploads', { recursive: true });\"",
         "build:browser": "cross-env APP_ENV=browser webpack --color --stats errors-warnings --config webpack.config.js",
         "build:server": "cross-env APP_ENV=server webpack --color --stats errors-warnings --config webpack.config.js",
         "build": "npm run clean && cross-env NODE_ENV=production npm run build:browser -- --bail --progress && cross-env NODE_ENV=production npm run build:server -- --bail --progress",
         "build:ci": "npm run clean && cross-env NODE_ENV=production npm run build:browser -- --bail && cross-env NODE_ENV=production npm run build:server -- --bail",
-        "dev": "npm run clean && concurrently --kill-others-on-fail --names \"build,server\" -c \"bgBlue.bold,bgCyan.bold\" \"cross-env NODE_ENV=development FAST_REFRESH=true npm run build:server -- -w\" \"wait-on ./server/server.js && cross-env NODE_ENV=development FAST_REFRESH=true npm run start -- --watch --trace-warnings --stack-trace-limit=9999\"",
+        "dev": "npm run clean && concurrently --kill-others-on-fail --names \"build,server\" -c \"bgBlue.bold,bgCyan.bold\" \"cross-env NODE_ENV=development FAST_REFRESH=true npm run build:server -- -w\" \"wait-on ./build/server/server.js && cross-env NODE_ENV=development FAST_REFRESH=true npm run start -- --watch --trace-warnings --stack-trace-limit=9999\"",
         "dev:no-watch": "npm run clean && cross-env NODE_ENV=development npm run build:browser -- --progress --bail && cross-env NODE_ENV=development npm run build:server -- --progress --bail && cross-env NODE_ENV=development npm run start -- --trace-warnings --stack-trace-limit=9999",
-        "start": "node ./server/server.js",
-        "lint:yml": "yamllint \"**/*.(yml|yaml)\" --ignore=\".idea\" --ignore=\".vscode\" --ignore=\".husky\" --ignore=\"build\" --ignore=\"cypress-cache\" --ignore=\"docker\" --ignore=\"hooks\" --ignore=\"node_modules\" --ignore=\"server\"",
-        "lint:yml:staged": "yamllint --ignore=\".idea\" --ignore=\".vscode\" --ignore=\".husky\" --ignore=\"build\" --ignore=\"cypress-cache\" --ignore=\"docker\" --ignore=\"hooks\" --ignore=\"node_modules\" --ignore=\"server\"",
-        "lint:md": "markdownlint-cli2 \"**/*.md\" \"#.idea\" \"#.vscode\" \"#.husky\" \"#build\" \"#cypress-cache\" \"#docker\" \"#hooks\" \"#node_modules\" \"#server\"",
-        "lint:md:fix": "markdownlint-cli2-fix \"**/*.md\" \"#.idea\" \"#.vscode\" \"#.husky\" \"#build\" \"#cypress-cache\" \"#docker\" \"#hooks\" \"#node_modules\" \"#server\"",
-        "lint:md:staged": "markdownlint-cli2-fix \"#.idea\" \"#.vscode\" \"#.husky\" \"#build\" \"#cypress-cache\" \"#docker\" \"#hooks\" \"#node_modules\" \"#server\"",
+        "start": "node ./build/server/server.js",
+        "lint:yml": "yamllint \"**/*.(yml|yaml)\" --ignore=\".idea\" --ignore=\".vscode\" --ignore=\".husky\" --ignore=\"build\" --ignore=\"cypress-cache\" --ignore=\"docker\" --ignore=\"hooks\" --ignore=\"node_modules\"",
+        "lint:yml:staged": "yamllint --ignore=\".idea\" --ignore=\".vscode\" --ignore=\".husky\" --ignore=\"build\" --ignore=\"cypress-cache\" --ignore=\"docker\" --ignore=\"hooks\" --ignore=\"node_modules\"",
+        "lint:md": "markdownlint-cli2 \"**/*.md\" \"#.idea\" \"#.vscode\" \"#.husky\" \"#build\" \"#cypress-cache\" \"#docker\" \"#hooks\" \"#node_modules\"",
+        "lint:md:fix": "markdownlint-cli2-fix \"**/*.md\" \"#.idea\" \"#.vscode\" \"#.husky\" \"#build\" \"#cypress-cache\" \"#docker\" \"#hooks\" \"#node_modules\"",
+        "lint:md:staged": "markdownlint-cli2-fix \"#.idea\" \"#.vscode\" \"#.husky\" \"#build\" \"#cypress-cache\" \"#docker\" \"#hooks\" \"#node_modules\"",
         "lint:ts": "tsc --noEmit",
         "lint:js": "eslint \"./**/*.{cjs,mjs,js,ts,jsx,tsx,html,vue}\"",
         "lint:js:staged": "eslint --fix --no-error-on-unmatched-pattern",
