--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "scripts": {
         "prepare": "node --stack-trace-limit=9999 --trace-warnings ./scripts/install-husky.js",
         "clean": "rimraf ./build/server ./build/browser/fonts ./build/browser/images ./build/browser/*.js* ./build/browser/*.css && node -e \"fs.mkdirSync('./build/browser/data/uploads', { recursive: true });\"",
-        "build:browser": "cross-env APP_ENV=browser webpack --color --stats errors-warnings --config webpack.config.js",
-        "build:server": "cross-env APP_ENV=server webpack --color --stats errors-warnings --config webpack.config.js",
-        "build": "npm run clean && cross-env NODE_ENV=production npm run build:browser -- --bail --progress && cross-env NODE_ENV=production npm run build:server -- --bail --progress",
-        "build:ci": "npm run clean && cross-env NODE_ENV=production npm run build:browser -- --bail && cross-env NODE_ENV=production npm run build:server -- --bail",
+        "build:browser": "cross-env APP_ENV=browser webpack --color --stats errors-warnings",
+        "build:server": "cross-env APP_ENV=server webpack --color --stats errors-warnings",
+        "buildOLD": "npm run clean && cross-env NODE_ENV=production npm run build:browser -- --bail --progress && cross-env NODE_ENV=production npm run build:server -- --bail --progress",
+        "build": "npm run clean && concurrently --kill-others-on-fail --names \"browser,server\" -c \"bgBlue.bold,bgCyan.bold\" \"cross-env NODE_ENV=production npm run build:browser -- --bail\" \"cross-env NODE_ENV=production npm run build:server -- --bail\"",
         "dev": "npm run clean && concurrently --kill-others-on-fail --names \"build,server\" -c \"bgBlue.bold,bgCyan.bold\" \"cross-env NODE_ENV=development FAST_REFRESH=true npm run build:server -- -w\" \"wait-on ./build/server/server.js && cross-env NODE_ENV=development FAST_REFRESH=true npm run start -- --watch --trace-warnings --stack-trace-limit=9999\"",
-        "dev:no-watch": "npm run clean && cross-env NODE_ENV=development npm run build:browser -- --progress --bail && cross-env NODE_ENV=development npm run build:server -- --progress --bail && cross-env NODE_ENV=development npm run start -- --trace-warnings --stack-trace-limit=9999",
+        "dev:no-watch": "npm run clean && concurrently --kill-others-on-fail --names \"browser,server\" -c \"bgBlue.bold,bgCyan.bold\" \"cross-env NODE_ENV=development npm run build:browser -- --bail\" \"cross-env NODE_ENV=development npm run build:server -- --bail\" && cross-env NODE_ENV=development npm run start -- --trace-warnings --stack-trace-limit=9999",
         "start": "node ./build/server/server.js",
         "lint:yml": "yamllint \"**/*.(yml|yaml)\" --ignore=\".idea\" --ignore=\".vscode\" --ignore=\".husky\" --ignore=\"build\" --ignore=\"cypress-cache\" --ignore=\"docker\" --ignore=\"hooks\" --ignore=\"node_modules\"",
         "lint:yml:staged": "yamllint --ignore=\".idea\" --ignore=\".vscode\" --ignore=\".husky\" --ignore=\"build\" --ignore=\"cypress-cache\" --ignore=\"docker\" --ignore=\"hooks\" --ignore=\"node_modules\"",
