--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 /.vscode/
 
 /build/
-/cypress-cache/
+/node-cache/
 /node_modules/
 /tests/unit/coverage
 /tests/unit/**/__snapshots__
-/tests/e2e/downloads
 /tests/e2e/screenshots
-/tests/e2e/videos
+/tests/e2e/reports
+/tests/e2e/results
 
 .bash_history
 .env
