--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -17,7 +17,7 @@ services:
     container_name: node
     volumes:
       - ./:/home/node/app
-      - ./cypress-cache:/home/node/.cache
+      - ./node-cache:/home/node/.cache
       - /tmp/.X11-unix:/tmp/.X11-unix
     networks:
       - custom
