--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       #- ./:/opt/project
       #- /opt/project/node_modules/
       - ./docker/node/.bash_history:/home/node/.bash_history
-      - ./cypress-cache:/home/node/.cache
+      - ./node-cache:/home/node/.cache
       - /tmp/.X11-unix:/tmp/.X11-unix
     networks:
       - custom
