--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
         "dev": "npm run clean && concurrently --kill-others-on-fail --names \"build,server\" -c \"bgBlue.bold,bgCyan.bold\" \"cross-env NODE_ENV=development FAST_REFRESH=true npm run build:server -- -w\" \"wait-on ./build/server/server.js && cross-env NODE_ENV=development FAST_REFRESH=true npm run start -- --watch --trace-warnings --stack-trace-limit=9999\"",
         "dev:no-watch": "npm run clean && concurrently --kill-others-on-fail --names \"browser,server\" -c \"bgBlue.bold,bgCyan.bold\" \"cross-env NODE_ENV=development npm run build:browser -- --bail\" \"cross-env NODE_ENV=development npm run build:server -- --bail\" && cross-env NODE_ENV=development npm run start -- --trace-warnings --stack-trace-limit=9999",
         "start": "node ./build/server/server.js",
-        "lint:yml": "yamllint \"**/*.(yml|yaml)\" --ignore=\".idea\" --ignore=\".vscode\" --ignore=\".husky\" --ignore=\"build\" --ignore=\"cypress-cache\" --ignore=\"docker\" --ignore=\"hooks\" --ignore=\"node_modules\"",
-        "lint:yml:staged": "yamllint --ignore=\".idea\" --ignore=\".vscode\" --ignore=\".husky\" --ignore=\"build\" --ignore=\"cypress-cache\" --ignore=\"docker\" --ignore=\"hooks\" --ignore=\"node_modules\"",
-        "lint:md": "markdownlint-cli2 \"**/*.md\" \"#.idea\" \"#.vscode\" \"#.husky\" \"#build\" \"#cypress-cache\" \"#docker\" \"#hooks\" \"#node_modules\"",
-        "lint:md:fix": "markdownlint-cli2-fix \"**/*.md\" \"#.idea\" \"#.vscode\" \"#.husky\" \"#build\" \"#cypress-cache\" \"#docker\" \"#hooks\" \"#node_modules\"",
-        "lint:md:staged": "markdownlint-cli2-fix \"#.idea\" \"#.vscode\" \"#.husky\" \"#build\" \"#cypress-cache\" \"#docker\" \"#hooks\" \"#node_modules\"",
+        "lint:yml": "yamllint \"**/*.(yml|yaml)\" --ignore=\".idea\" --ignore=\".vscode\" --ignore=\".husky\" --ignore=\"build\" --ignore=\"node-cache\" --ignore=\"docker\" --ignore=\"hooks\" --ignore=\"node_modules\"",
+        "lint:yml:staged": "yamllint --ignore=\".idea\" --ignore=\".vscode\" --ignore=\".husky\" --ignore=\"build\" --ignore=\"node-cache\" --ignore=\"docker\" --ignore=\"hooks\" --ignore=\"node_modules\"",
+        "lint:md": "markdownlint-cli2 \"**/*.md\" \"#.idea\" \"#.vscode\" \"#.husky\" \"#build\" \"#node-cache\" \"#docker\" \"#hooks\" \"#node_modules\"",
+        "lint:md:fix": "markdownlint-cli2-fix \"**/*.md\" \"#.idea\" \"#.vscode\" \"#.husky\" \"#build\" \"#node-cache\" \"#docker\" \"#hooks\" \"#node_modules\"",
+        "lint:md:staged": "markdownlint-cli2-fix \"#.idea\" \"#.vscode\" \"#.husky\" \"#build\" \"#node-cache\" \"#docker\" \"#hooks\" \"#node_modules\"",
         "lint:ts": "tsc --noEmit",
-        "lint:js": "echo 'Skipping eslint until PR gets merged'; return 0; eslint \"./**/*.{cjs,mjs,js,ts,jsx,tsx,html,vue}\"",
+        "lint:js": "eslint \"./**/*.{cjs,mjs,js,ts,jsx,tsx,html,vue}\"",
         "lint:js:staged": "eslint --fix --no-error-on-unmatched-pattern",
         "lint:js:fix": "npm run lint:js -- --fix",
         "lint:scss:staged": "stylelint --allow-empty-input --config ./stylelint.config.js --fix",
@@ -50,16 +50,14 @@
         "lint:scss:fix": "npm run lint:scss -- --fix",
         "lint": "concurrently --names \"eslint,tsc,stylelint,yamllint,markdownlint\" -c \"bgCyan.bold,bgYellow.bold,bgBlue.bold,bgMagenta.bold,bgGreen.bold\" \"npm run lint:js\" \"npm run lint:ts\" \"npm run lint:scss\" \"npm run lint:yml\" \"npm run lint:md\"",
         "lint:fix": "concurrently --names \"eslint,tsc,stylelint,yamllint,markdownlint\" -c \"bgCyan.bold,bgYellow.bold,bgBlue.bold,bgMagenta.bold,bgGreen.bold\" \"npm run lint:js:fix\" \"npm run lint:ts\" \"npm run lint:scss:fix\" \"npm run lint:yml\" \"npm run lint:md:fix\"",
-        "test": "rimraf ./cypress-cache/mesa_shader_cache && cross-env NODE_ENV=test jest --colors --passWithNoTests --testPathPattern=\"./src/.*.test.(j|t)sx?\"",
+        "test": "cross-env TEST=true jest --colors --passWithNoTests --testPathPattern=\"./src/.*.test.(j|t)sx?\"",
         "test:coverage": "npm run test -- --coverage",
         "test:ci": "cross-env CI=true npm run test",
         "test:ci:coverage": "cross-env CI=true npm run test:coverage",
         "test:watch": "npm run test -- --watch",
         "test:watch:coverage": "npm run test:coverage -- --watch",
-        "test:e2e": "node --stack-trace-limit=9999 ./scripts/run-e2e.js \"npx cypress run\"",
-        "test:e2e:chrome": "echo \"Not Implemented yet!\"; return 0; node --stack-trace-limit=9999 ./scripts/run-e2e.js \"npx cypress run --browser chromium --headless\"",
-        "test:e2e:chrome:headed": "echo \"Not Implemented yet!\"; return 0; node --stack-trace-limit=9999 ./scripts/run-e2e.js \"npx cypress run --browser chromium\"",
-        "test:e2e:open": "node --stack-trace-limit=9999 ./scripts/run-e2e.js \"npx cypress open --browser --e2e --project .\"",
+        "test:e2e": "cross-env TEST=true playwright test",
+        "test:e2e:ui": "npm run test:e2e -- --ui",
         "test:e2e:ci": "cross-env CI=true npm run test:e2e",
         "audit:ci": "npm audit --audit-level high --json"
     },
@@ -128,6 +126,7 @@
         "@babel/preset-react": "7.22.5",
         "@babel/preset-typescript": "7.22.5",
         "@babel/register": "7.22.5",
+        "@playwright/test": "1.36.0",
         "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
         "@svgr/webpack": "8.0.1",
         "@testing-library/jest-dom": "5.16.5",
@@ -142,10 +141,9 @@
         "concurrently": "8.2.0",
         "cross-env": "7.0.3",
         "css-loader": "6.8.1",
-        "cypress": "12.17.1",
         "eslint": "8.44.0",
         "eslint-config-airbnb": "19.0.4",
-        "eslint-config-airbnb-typescript": "17.0.0",
+        "eslint-config-airbnb-typescript": "17.1.0",
         "eslint-plugin-babel": "5.3.1",
         "eslint-plugin-destructuring": "2.2.1",
         "eslint-plugin-import": "2.27.5",
@@ -163,6 +161,7 @@
         "micromatch": "4.0.5",
         "mini-css-extract-plugin": "2.7.6",
         "normalize.css": "8.0.1",
+        "playwright": "1.36.0",
         "postcss-cli": "10.1.0",
         "postcss-loader": "7.3.3",
         "resolve-url-loader": "5.0.0",
