--- a/.stylelintignore
+++ b/.stylelintignore
@@ -3,7 +3,10 @@
 /.github
 /.husky
 /build
-/cypress-cache
 /docker
 /hooks
+/node-cache
 /node_modules
+/tests/e2e/screenshots
+/tests/e2e/reports
+/tests/e2e/results
