--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -6,13 +6,16 @@
         ".github",
         ".husky",
         "build",
-        "cypress-cache",
         "docker",
         "hooks",
-        "**/node_modules/**"
+        "node-cache",
+        "**/node_modules/**",
+        "/tests/e2e/screenshots",
+        "/tests/e2e/reports",
+        "/tests/e2e/results",
     ],
     "include": [
         "./**/*",
-        // "custom.d.ts"
+         "custom.d.ts"
     ]
 }
