--- a/package.json
+++ b/package.json
@@ -74,13 +74,13 @@
         "@types/cookie-parser": "1.4.3",
         "@types/cors": "2.8.13",
         "@types/express": "4.17.17",
-        "@types/express-session": "^1.17.7",
+        "@types/express-session": "1.17.7",
         "@types/fluent-ffmpeg": "2.1.21",
         "@types/lodash.isequal": "4.5.6",
         "@types/multer": "1.4.7",
-        "@types/node": "20.4.1",
-        "@types/react": "18.2.14",
-        "@types/react-dom": "18.2.6",
+        "@types/node": "20.4.2",
+        "@types/react": "18.2.15",
+        "@types/react-dom": "18.2.7",
         "@types/serialize-javascript": "5.0.2",
         "@types/uuid": "9.0.2",
         "@types/ws": "8.5.5",
@@ -89,9 +89,9 @@
         "cookie-parser": "1.4.6",
         "core-js": "3.31.1",
         "cors": "2.8.5",
-        "csrf-sync": "^4.0.1",
+        "csrf-sync": "4.0.1",
         "express": "4.18.2",
-        "express-session": "^1.17.3",
+        "express-session": "1.17.3",
         "fluent-ffmpeg": "2.1.2",
         "lodash.isequal": "4.5.0",
         "multer": "1.4.5-lts.1",
@@ -113,16 +113,16 @@
         "ws": "8.13.0"
     },
     "devDependencies": {
-        "@babel/cli": "7.22.6",
-        "@babel/core": "7.22.8",
-        "@babel/eslint-parser": "7.22.7",
+        "@babel/cli": "7.22.9",
+        "@babel/core": "7.22.9",
+        "@babel/eslint-parser": "7.22.9",
         "@babel/eslint-plugin": "7.22.5",
         "@babel/plugin-proposal-class-properties": "7.18.6",
         "@babel/plugin-proposal-decorators": "7.22.7",
         "@babel/plugin-proposal-destructuring-private": "7.22.5",
         "@babel/plugin-proposal-export-default-from": "7.22.5",
-        "@babel/plugin-transform-runtime": "7.22.7",
-        "@babel/preset-env": "7.22.7",
+        "@babel/plugin-transform-runtime": "7.22.9",
+        "@babel/preset-env": "7.22.9",
         "@babel/preset-react": "7.22.5",
         "@babel/preset-typescript": "7.22.5",
         "@babel/register": "7.22.5",
@@ -141,7 +141,7 @@
         "concurrently": "8.2.0",
         "cross-env": "7.0.3",
         "css-loader": "6.8.1",
-        "eslint": "8.44.0",
+        "eslint": "8.45.0",
         "eslint-config-airbnb": "19.0.4",
         "eslint-config-airbnb-typescript": "17.1.0",
         "eslint-plugin-babel": "5.3.1",
@@ -161,7 +161,7 @@
         "micromatch": "4.0.5",
         "mini-css-extract-plugin": "2.7.6",
         "normalize.css": "8.0.1",
-        "playwright": "1.36.0",
+        "playwright": "1.36.1",
         "postcss-cli": "10.1.0",
         "postcss-loader": "7.3.3",
         "resolve-url-loader": "5.0.0",
